<resources>
    <string name="app_name">KeKodWeatherUI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="istanbul">İstanbul,\nTurkey</string>
    <string name="date">Aug 25, 2021</string>
    <string name="partly_cloudy">\tPartly cloudy</string>
    <string name="location_image">locationImage</string>
    <string name="additional_info">Additional Info</string>
</resources>