<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/istanbul"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/partly_cloudy"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/cloud_sun" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:contentDescription="@string/location_image"
            android:src="@drawable/istanbul" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="12.00\n30°"
                android:textSize="20sp"
                app:drawableBottomCompat="@drawable/cloud_sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="15.00\n33°"
                android:textSize="20sp"
                app:drawableBottomCompat="@drawable/sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="17.00\n32°"
                android:textSize="20sp"
                app:drawableBottomCompat="@drawable/rain_sun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="19.00\n28°"
                android:textSize="20sp"
                app:drawableBottomCompat="@drawable/cloudy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="21.00\n21°"
                android:textSize="20sp"
                app:drawableBottomCompat="@drawable/cloud_moon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDegree"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="30 °C"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Clear"
                android:textSize="25sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/additional_info"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Precipitation\n\n%3"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Humidity\n\n%74"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Windy\n\n18 km/h"
                    android:textSize="10sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/precipitation" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/humidity" />

                <ImageView
                    android:layout_width="43dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/wind" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="21°"
                android:layout_marginLeft="30dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/temperature" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>